WSGEN-935: multiple contacts support and missed spacing fix

--- a/web/themes/custom/jcc_base/src/sass/layout/_page.scss
+++ b/web/themes/custom/jcc_base/src/sass/layout/_page.scss
@@ -70,17 +70,25 @@ div[class^='jcc-'] .body p, .date, .location, .relevance, .geolocation-map-wrapp
   margin-bottom: 1.5em;
 }
 
-.relevance {
-  .tags {
-    margin-top: 0;
-  }
+.tags.relevance {
+  margin-top: 0;
+}
 
+/* display metadata listings inline */
+.relevance {
   div {
     div:not(:first-child) {
       div {
         display: inline;
       }
     }
+  }
+}
+
+/* display contacts listing inline */
+.contacts {
+  div {
+    display: inline;
   }
 }
 
